--- a/index.html
+++ b/index.html
@@ -1,65 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        .navbar{
-            width: 100%;
-            height: 100px;
-            background-color: black;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
-        .navbar-heading{
-            flex-grow: 1;
-            padding-left: 20px; 
-            color: white;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        }
-        .navbar-menu{
-            width: 35%;
-            height: 40px;
-            position: absolute;
-            right: 10px;
-            display: flex;
-            /* background-color: aqua; */
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px;
-        }
-        .navbar-menu-item{
-            /* width: 70px;
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
+            .navbar {
+                width: 100%;
+                height: 100px;
+                background-color: black;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+            }
+            .navbar-heading {
+                width: 200px;
+                flex-grow: 1;
+                padding-left: 20px;
+                font-size: xx-large;
+                text-decoration: none;
+                color: white;
+                cursor: pointer;
+                font-family: "Lucida Sans", "Lucida Sans Regular",
+                    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana,
+                    sans-serif;
+            }
+            .navbar-menu {
+                width: 35%;
+                height: 40px;
+                position: absolute;
+                right: 10px;
+                display: flex;
+                /* background-color: aqua; */
+                justify-content: space-around;
+                align-items: center;
+                padding: 10px;
+            }
+
+            .navbar-menu-item {
+                /* width: 70px;
             height: 50px; */
-            /* border-radius: 25%; */
-            /* background-color: white; */
-            color: white;
-            transition: 100ms ease-in-out;
-        }
-        .navbar-menu-item:hover {
-            color: navy;
-            cursor: pointer;
-            transform: translateY(10px);
-        }
-    </style>
-</head>
-<body>
-    <div class="navbar">
-        <div class="navbar-heading">
-            <h1>Company Name</h1>
+                /* border-radius: 25%; */
+                /* background-color: white; */
+                text-decoration: none;
+                color: white;
+                font-size: larger;
+                filter: blur(1px);
+                transition: 100ms ease-in-out;
+            }
+            .navbar-menu-item:hover {
+                color: yellowgreen;
+                cursor: pointer;
+                font-size: x-large;
+                transform: translateY(5px);
+                filter: blur(0);
+            }
+        </style>
+    </head>
+    <body>
+        <div class="navbar">
+            <div class="navbar-heading">
+                <a>Company Name</a>
+            </div>
+            <div class="navbar-menu">
+                <a class="navbar-menu-item" href="#">Home</a>
+                <a class="navbar-menu-item">Products</a>
+                <a class="navbar-menu-item">Careers</a>
+                <a class="navbar-menu-item">About</a>
+            </div>
         </div>
-        <div class="navbar-menu">
-            <a class="navbar-menu-item">Home</a>
-            <a class="navbar-menu-item">Products</a>
-            <a class="navbar-menu-item">Careers</a>
-            <a class="navbar-menu-item">About</a>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
