--- a/navbar.html
+++ b/navbar.html
@@ -13,25 +13,41 @@
             background-color: black;
             width: 100%;
             height: 100px;
+            display: flex;
+            align-items: center;
         }
         .logo{
             color: white;
+            margin-left: 30px;
         }
         .navbar-menu{
-            margin-right: 10px;
+            position: absolute;
+            right: 10px;
+            width: 30%;
+            display: flex;
+            justify-content: space-around;
+        }
+        .navbar-menu a{
+            text-decoration: none;
+            color: white;
+            font-size: large;
+            transition: 200ms ease-in-out;
+        }
+        .navbar-menu a:hover{
+            color: yellowgreen;
         }
     </style>
 </head>
 <body>
     <div class="navbar">
         <div class="logo">
-            <h1>Company</h1>
+            <h1>Company Name</h1>
         </div>
         <div class="navbar-menu">
             <a href="">Home</a>
+            <a href="">Products</a>
+            <a href="">Careers</a>
             <a href="">About</a>
-            <a href=""></a>
-            <a href=""></a>
         </div>
     </div>
 </body>
